Change table name from blog to post and use undercase + Separate in Controller the use for contract + In Persistance return boolean and specify mapping and type + In openapi change put to patch for posts + Separate in fastifyServer corsOptions and args values in command line, and logErrorAndExit + Add two commands to clean and clean build + Add error test case for post
