# src/controllers/PostRoutesController.ts
@@ -1,129 +1,61 @@
 import { FastifyRequest } from "fastify";
-import * as t from "io-ts";
-import { fold } from "fp-ts/lib/Either";
-import { pipe } from "fp-ts/lib/pipeable";
-import { isLeft, isRight } from "fp-ts/lib/Either";
 
 import { PostRepository } from "persistances/PostRepository";
 
-import postsContract from "../generated/contracts/postsContract";
+import postsContract, {
+  listAllPosts,
+  createOnePost,
+  updateOnePost,
+  deleteOnePost,
+} from "../generated/contracts/postsContract";
 import { ResponseGetPost } from "../generated/types/ResponseGetPost";
-import { Response } from "../generated/types/Response";
-import * as ErrorType from "../generated/types/Error";
-
-// prettier-ignore
-import { RequestBodyValuesTypePost, requestBody, RequestBodyValuesTypePut,
-  RequestBodyPost } from "../models/Post";
 
 // Routes
-// Extract functions
 export function GetPosts(postRepository: PostRepository): postsContract {
   return {
-    listAllPosts: async (_, response) => {
-      const allPosts: ResponseGetPost[] = await postRepository.getAll();
-      return response
-        .code(200)
-        .header("Content-Type", "application/json; charset=utf-8") // not necessary
-        .send<ResponseGetPost[]>(allPosts);
-    },
-    createOnePost: async (request: FastifyRequest, response) => {
-      try {
-        const requestBody: RequestBodyPost = {
-          id: request.body.id,
-          title: request.body.title || "",
-          post: request.body.post || "",
-          likes: request.body.likes || 0,
-        };
-        if (
-          // Decode not needed, logic already in registerFasitfy using schemas
-          isRight(RequestBodyValuesTypePost.decode(request.body)) &&
-          (await postRepository.createOne(requestBody))
-        ) {
-          return response
-            .code(201)
-            .header("Content-Type", "application/json; charset=utf-8")
-            .send<Response>({ response: "Post created" });
-        } else {
-          throw new TypeError("Invalid type or parameter send in body");
-        }
-      } catch (error) {
-        if (error instanceof TypeError) {
-          request.log.error(error);
-          return response
-            .code(400)
-            .header("Content-Type", "application/json; charset=utf-8")
-            .send<ErrorType.Error>({ error: error.message });
-        } else {
-          throw new Error(error);
-        }
-      }
-    },
-    updateOnePost: async (request, response) => {
-      try {
-        // failure handler
-        const onLeft = (errors: t.Errors): string => `${errors.length} error(s) found`;
-        // success handler
-        const onRight = (s: string) => s;
+    listAllPosts: listAllPosts(postRepository),
+    createOnePost: createOnePost(postRepository),
+    updateOnePost: updateOnePost(postRepository),
+    deleteOnePost: deleteOnePost(postRepository),
+  };
+}
 
+function listAllPosts(postRepository: PostRepository): listAllPosts {
+  return async (_: any, response) => {
+    const allPosts: ResponseGetPost[] = await postRepository.getAll();
+    return response.code(200).send<ResponseGetPost[]>(allPosts);
+  };
+}
 
-        // If you have the good request body in the openapi you don't need to validate
-        await Promise.all(
-          Object.keys(request.body).map(async (key) => {
-            const keyDecoded = pipe(requestBody.decode(key), fold(onLeft, onRight));
-            if (
-              isLeft(requestBody.decode(key)) ||
-              isLeft(RequestBodyValuesTypePut.decode(request.body)) ||
-              // to change with good boolean
-              !(await postRepository.updateOne(Number(request.params.id), request.body, keyDecoded))
-            ) {
-              throw new TypeError("Invalid type or parameter send in body");
-            }
-          })
-        );
-        return response
-          .code(200)
-          .header("Content-Type", "application/json; charset=utf-8")
-          .send<Response>({
-            response: "Post " + request.params.id + " updated",
-          });
-      } catch (error) {
-        if (error) {
-          if (error instanceof TypeError) {
-            request.log.error(error);
-            return response
-              .code(400)
-              .header("Content-Type", "application/json; charset=utf-8")
-              .send<ErrorType.Error>({ error: error.message });
-          } else {
-            throw new Error(error);
-          }
-        }
-      }
-    },
-    deleteOnePost: async (request, response) => {
-      try {
-        if (await postRepository.delete(Number(request.params.id))) {
-          return response
-            .code(200)
-            .header("Content-Type", "application/json; charset=utf-8")
-            .send<Response>({
-              response: "Post " + request.params.id + " deleted",
-            });
-        } else {
-          // return 404 if not found
-          throw new ErrorEvent("Nothing to delete");
-        }
-      } catch (error) {
-        if (error instanceof ErrorEvent) {
-          request.log.error(error);
-          return response
-            .code(400)
-            .header("Content-Type", "application/json; charset=utf-8")
-            .send<ErrorType.Error>({ error: error.message });
-        } else {
-          throw new Error(error);
-        }
-      }
-    },
+function createOnePost(postRepository: PostRepository): createOnePost {
+  return async (request: FastifyRequest, response) => {
+    if (await postRepository.createOne(request.body)) {
+      return response.code(201).send();
+    } else {
+      request.log.error("Error while creating a post");
+      return response.code(400).send();
+    }
+  };
+}
+
+function updateOnePost(postRepository: PostRepository): updateOnePost {
+  return async (request, response) => {
+    if (await postRepository.updateOne(Number(request.params.id), request.body)) {
+      return response.code(204).send();
+    } else {
+      request.log.error("Error while updating a post");
+      return response.code(400).send();
+    }
+  };
+}
+
+function deleteOnePost(postRepository: PostRepository): deleteOnePost {
+  return async (request, response) => {
+    if (await postRepository.delete(Number(request.params.id))) {
+      return response.code(204).send();
+    } else {
+      request.log.error("Nothing to delete");
+      return response.code(404).send();
+    }
   };
 }
